--- a/Code/templates/index.html
+++ b/Code/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <h1>Random Word:</h1>
+  <h1>Sampled Word:</h1>
   <h2>{{ chosen_word }}</h2>
   <h3>From histogram:</h3>
   <h4>{{ histogram }}</h4>
