--- a/Code/templates/index.html
+++ b/Code/templates/index.html
@@ -4,12 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Socratweet</title>
 </head>
 <body>
 
-  <h1>Sampled Word:</h1>
-  <h2>{{ chosen_word }}</h2>
+  <div style="display: flex; flex-direction: column; align-items: center;">
+    <h1>Sampled Word:</h1>
+    <h2>{{ chosen_word }}</h2>
+  </div>
   <h3>From histogram:</h3>
   <h4>{{ histogram }}</h4>
 </body>
