display markov tweet in index.html

--- a/Code/templates/index.html
+++ b/Code/templates/index.html
@@ -9,6 +9,9 @@
 <body>
 
   <div style="display: flex; flex-direction: column; align-items: center;">
+    <h1>Tweet:</h1>
+    <h2>{{ tweet }}</h2>
+    
     <h1>Sampled Word:</h1>
     <h2>{{ chosen_word }}</h2>
   </div>
